fixed footer margin on firefox

--- a/_sass/op/_footer.scss
+++ b/_sass/op/_footer.scss
@@ -144,5 +144,6 @@
   p {
     -webkit-margin-before: 0em;
     -webkit-margin-after: 0em;
+    margin: 0 0 $spacing-unit;
   }
 }
